--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,8 @@
             <option value="480p">SD/480p</option>
             <option value="360p">360p</option>
             <option value="240p">240p</option>
+            <option value="144p">144p</option>
+            <option value="Auto">Auto</option>
 
             <!-- Add more options as needed -->
         </select>
@@ -49,6 +51,8 @@
             <option value="480p">SD/480p</option>
             <option value="360p">360p</option>
             <option value="240p">240p</option>
+            <option value="144p">144p</option>
+            <option value="Auto">Auto</option>
             </select>
     </label>
     <button id="save">Save</button>
