--- a/popup.html
+++ b/popup.html
@@ -4,251 +4,266 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Quality Adjuster</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <title>YouTube Data Saver</title>
     <style>
         :root {
-            --youtube-red: #ff3b3b;
-            --youtube-dark-red: #cc2929;
-            --youtube-black: #282828;
-            --youtube-fade: #f1f1f1;
+            --primary: #ff0000;
+            --primary-light: #ff4d4d;
+            --bg: #ffffff;
+            --text: #0f0f0f;
+            --border: #e5e5e5;
         }
 
         body {
-            width: 320px;
-            font-family: 'Roboto', 'Segoe UI', sans-serif;
+            width: 340px;
+            font-family: 'Inter', -apple-system, sans-serif;
             padding: 12px;
-            /* Reduced from 16px */
-            background: linear-gradient(135deg, var(--youtube-red) 0%, var(--youtube-dark-red) 100%);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
             margin: 0;
+            color: var(--text);
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.98);
+            background: var(--bg);
             padding: 16px;
-            /* Reduced from 20px */
             border-radius: 12px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-            -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 24px rgba(0, 0, 0, 0.15);
         }
 
-        h1 {
-            font-size: 20px;
-            color: var(--youtube-red);
-            margin: 0 0 4px 0;
-            text-align: center;
-            font-weight: 600;
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 16px;
+            padding-bottom: 12px;
+            border-bottom: 2px solid var(--primary);
         }
 
-        .subtitle {
-            font-size: 12px;
-            color: #666;
-            text-align: center;
+        .toggle-switch {
+            position: relative;
+            width: 52px;
+            height: 28px;
+        }
+
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .3s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 4px;
+            bottom: 4px;
+            background: white;
+            transition: .3s;
+            border-radius: 50%;
+        }
+
+        input:checked+.slider {
+            background-color: var(--primary);
+        }
+
+        input:checked+.slider:before {
+            transform: translateX(24px);
+        }
+
+        .control-section {
             margin-bottom: 16px;
         }
 
         .control-group {
             background: white;
-            padding: 8px;
-            /* Reduced from 12px */
+            padding: 12px;
             border-radius: 8px;
-            margin-bottom: 8px;
-            /* Reduced from 12px */
-            transition: transform 0.2s;
-            border: 1px solid #eee;
+            margin-bottom: 12px;
+            border: 1px solid var(--border);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
         }
 
-        .control-group:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        .quality-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+            margin-bottom: 12px;
+        }
+
+        .quality-grid .control-group {
+            margin-bottom: 0;
         }
 
         label {
             display: block;
-            margin-bottom: 4px;
-            /* Reduced from 8px */
-            color: var(--youtube-black);
-            font-size: 14px;
+            margin-bottom: 6px;
+            color: var(--text);
+            font-size: 13px;
             font-weight: 500;
         }
 
         select {
             width: 100%;
-            padding: 6px;
-            /* Reduced from 8px */
-            border: 2px solid #e8eaed;
+            padding: 8px;
+            border: 1px solid var(--border);
             border-radius: 6px;
-            font-size: 14px;
-            color: #3c4043;
+            font-size: 13px;
+            font-family: 'Inter', sans-serif;
+            color: var(--text);
+            background: white;
             cursor: pointer;
             transition: border-color 0.2s;
         }
 
         select:hover {
-            border-color: var(--youtube-red);
+            border-color: var(--primary);
+        }
+
+        select:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 2px rgba(255, 0, 0, 0.1);
         }
 
         .slider-container {
             display: flex;
             align-items: center;
             gap: 8px;
-            padding: 4px 0;
+            padding: 2px 0;
         }
 
         input[type="range"] {
             flex: 1;
             height: 4px;
-            background: #e8eaed;
+            background: var(--border);
             border-radius: 4px;
             appearance: none;
         }
 
         input[type="range"]::-webkit-slider-thumb {
             appearance: none;
-            width: 16px;
-            height: 16px;
-            background: var(--youtube-red);
+            width: 20px;
+            height: 20px;
+            background: var(--primary);
             border-radius: 50%;
             cursor: pointer;
-            transition: transform 0.2s;
-        }
-
-        input[type="range"]::-webkit-slider-thumb:hover {
-            transform: scale(1.2);
+            border: 2px solid white;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         .slider-value {
-            min-width: 40px;
-            padding: 4px 8px;
-            background: var(--youtube-red);
+            min-width: 44px;
+            padding: 4px 12px;
+            background: var(--primary);
             color: white;
-            border-radius: 12px;
+            border-radius: 16px;
             text-align: center;
             font-weight: 500;
             font-size: 14px;
         }
 
-        #toggleButton {
-            width: 100%;
-            padding: 8px;
-            /* Reduced from 12px */
-            border: none;
-            border-radius: 6px;
-            background: var(--youtube-red);
-            color: white;
-            font-weight: 500;
-            font-size: 15px;
-            cursor: pointer;
-            transition: all 0.2s;
-            opacity: 1 !important;
-            position: relative;
-            z-index: 10;
-        }
-
-        #toggleButton:hover {
-            background: var(--youtube-dark-red);
-            transform: translateY(-1px);
-        }
-
-        #toggleButton.disabled {
-            background: var(--youtube-black);
-            color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .content-wrapper {
-            opacity: 1;
-            transition: opacity 0.3s;
-            margin-bottom: 20px;
-        }
-
-        .content-wrapper.disabled {
-            opacity: 0.5;
-            pointer-events: none;
-        }
-
-        .preset-controls {
-            background: white;
-            padding: 8px;
-            border-radius: 8px;
-            border: 1px solid #eee;
-            margin-top: 8px;
-            transition: transform 0.2s;
-        }
-
-        .preset-controls:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 16px;
         }
 
         .credits {
+            margin-top: 20px;
             text-align: center;
-            margin-top: 12px;
-            /* Reduced from 16px */
             font-size: 12px;
-            color: #666;
+            color: var(--text-secondary);
         }
 
         .credits a {
-            color: var(--youtube-red);
+            color: var(--secondary);
             text-decoration: none;
+            font-weight: 500;
         }
 
         .credits a:hover {
             text-decoration: underline;
+        }
+
+        .content-wrapper.disabled {
+            opacity: 0.3;
+            pointer-events: none;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>YouTube Data Saver</h1>
-        <div class="subtitle">Smart quality control for speed watchers</div>
+        <div class="header">
+            <h1>YouTube Data Saver</h1>
+            <label class="toggle-switch">
+                <input type="checkbox" id="toggleButton" title="Enable/Disable Data Saver">
+                <span class="slider"></span>
+            </label>
+        </div>
 
         <div class="content-wrapper">
-            <div class="control-group">
-                <label>Speed Threshold</label>
-                <div class="slider-container">
-                    <input type="range" id="speedThreshold" min="0.25" max="4.0" step="0.25" value="1.0" title="Playback speed threshold for quality adjustment">
-                    <span id="thresholdValue" class="slider-value">1.0x</span>
+            <div class="control-section">
+                <div class="control-group">
+                    <label>Playback Speed Threshold</label>
+                    <div class="slider-container">
+                        <input title="Speed Threshold" type="range" id="speedThreshold" min="0.25" max="4.0" step="0.25" value="1.0">
+                        <span id="thresholdValue" class="slider-value">1.0x</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="quality-grid">
+                <div class="control-group">
+                    <label>Above Threshold</label>
+                    <select id="qualityAbove" aria-label="Above Threshold">
+                        <option value="4320p">8K</option>
+                        <option value="2160p">4K</option>
+                        <option value="1440p">2K</option>
+                        <option value="1080p">1080p</option>
+                        <option value="720p">720p</option>
+                        <option value="480p">480p</option>
+                        <option value="360p">360p</option>
+                        <option value="240p">240p</option>
+                        <option value="144p">144p</option>
+                        <option value="Auto">Auto</option>
+                    </select>
+                </div>
+
+                <div class="control-group">
+                    <label>Below Threshold</label>
+                    <select id="qualityBelow" aria-label="Below Threshold">
+                        <option value="4320p">8K</option>
+                        <option value="2160p">4K</option>
+                        <option value="1440p">2K</option>
+                        <option value="1080p">1080p</option>
+                        <option value="720p">720p</option>
+                        <option value="480p">480p</option>
+                        <option value="360p">360p</option>
+                        <option value="240p">240p</option>
+                        <option value="144p">144p</option>
+                        <option value="Auto">Auto</option>
+                    </select>
                 </div>
             </div>
 
             <div class="control-group">
-                <label for="qualityAbove">Above Threshold</label>
-                <select id="qualityAbove">
-                    <option value="4320p">8K</option>
-                    <option value="2160p">4K</option>
-                    <option value="1440p">2K</option>
-                    <option value="1080p">1080p</option>
-                    <option value="720p">720p</option>
-                    <option value="480p">480p</option>
-                    <option value="360p">360p</option>
-                    <option value="240p">240p</option>
-                    <option value="144p">144p</option>
-                    <option value="Auto">Auto</option>
-                </select>
-            </div>
-
-            <div class="control-group">
-                <label for="qualityBelow">Below Threshold</label>
-                <select id="qualityBelow">
-                    <option value="4320p">8K</option>
-                    <option value="2160p">4K</option>
-                    <option value="1440p">2K</option>
-                    <option value="1080p">1080p</option>
-                    <option value="720p">720p</option>
-                    <option value="480p">480p</option>
-                    <option value="360p">360p</option>
-                    <option value="240p">240p</option>
-                    <option value="144p">144p</option>
-                    <option value="Auto">Auto</option>
-                </select>
-            </div>
-
-            <div class="preset-controls">
-                <label for="presets">Quick Presets</label>
-                <select id="presets">
+                <label id="presetsLabel">Quick Presets</label>
+                <select id="presets" aria-labelledby="presetsLabel">
                     <option value="efficient">Efficient (Recommended)</option>
                     <option value="ultra-light">Ultra Light</option>
                     <option value="balanced">Balanced</option>
@@ -257,7 +272,6 @@
             </div>
         </div>
 
-        <button id="toggleButton">Enable</button>
         <div class="credits">
             Created by <a href="https://www.colemanlai.com" target="_blank" rel="noopener noreferrer">Coleman Lai</a>
         </div>
